About CSS text characteristic

--- a/06-CSS-Basics/app.css
+++ b/06-CSS-Basics/app.css
@@ -1,12 +1,15 @@
 h2 {
-    color: thistle;
+    color: teal;
+    background-color: papayawhip;
 }
 
 button {
     color: tomato;
+    background-color: cadetblue;
 }
 
 p {
-    color: teal;
-    background-color: antiquewhite;
+    color: 
+   olive;
+    background-color: orange;
 }
