--- a/06-CSS-Basics/cuttlefish_app.css
+++ b/06-CSS-Basics/cuttlefish_app.css
@@ -1,7 +1,7 @@
 h1 {
     text-align: center;
     font-weight: normal;
-    text-decoration: underline;
+    text-decoration: olive underline wavy;
     letter-spacing: 15px;
     font-size: 100px;
     font-family: Arial, Segoe UI, Futura;
