--- a/07-The-World-of-CSS-Selectors/starter_app.css
+++ b/07-The-World-of-CSS-Selectors/starter_app.css
@@ -87,3 +87,7 @@ button:hover {
     background-color: #ffc34a;
     font-size: 60px;
 }
+
+button {
+    background-color: orangered !important;
+}
