--- a/08-The-CSS-Box-Model/dispaly.css
+++ b/08-The-CSS-Box-Model/dispaly.css
@@ -1,6 +1,27 @@
 span {
     background-color: palevioletred;
     border: 1px solid black;
-    width: 500;
-    padding: 10px;
+    width: 500px;
+    padding: 100px;
+    margin: 50px;
+
+}
+
+h1 {
+    background-color: paleturquoise;
+    border: 1px solid black;
+    width: 300px;
+    height: 200px;
+    padding: 50px;
+    margin: 100px;
+    display: none;
+}
+
+div {
+    height:200px;
+    width: 200px;
+    background-color: orange;
+    border: 5px solid red;
+    /* display: inline-block; */
+    margin: 50px;
 }
