--- a/09-Other-Assorted-Useful-CSS-Properties/transform.css
+++ b/09-Other-Assorted-Useful-CSS-Properties/transform.css
@@ -23,7 +23,28 @@ h1:nth-of-type(4n) {
     background-color: #8338ec;
 }
 
+
 section:first-of-type h1:nth-of-type(1) {
     transform: rotate(45deg);
-    transform-origin: bottom right;
+    transform-origin: top right;
+}
+
+section:first-of-type h1:nth-of-type(2) {
+    transform: scaleY(2);
+}
+
+section:first-of-type h1:nth-of-type(3) {
+    transform: translateX(200px);
+}
+
+section:first-of-type h1:nth-of-type(4) {
+    transform: translate(-200px, 300px);
+}
+
+section:nth-of-type(2) h1:nth-of-type(1) {
+    transform: skew(30deg);
+}
+
+section:nth-of-type(2) h1:nth-of-type(2) {
+    transform: skew(10deg, 25deg);
 }
