--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
@@ -10,11 +10,12 @@ h1 {
 #container  {
     background-color: #6c757d;
     width: 90%;
-    height: 1200px;
+    height: 500px;
     margin: 0 auto;
     border: 5px solid #6c757d;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: row;
+    justify-content: center;
 }
 
 #container div {
