--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
@@ -16,7 +16,8 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: baseline;
+    align-items: flex-end;
+    flex-wrap: wrap;
     
 }
 
@@ -24,5 +25,4 @@ h1 {
     width: 200px;
     height: 200px;
     text-align: center;
-    font-size: 7em;
 }
