--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
@@ -16,7 +16,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-wrap: wrap;
     
 }
@@ -25,4 +25,11 @@ h1 {
     width: 200px;
     height: 200px;
     text-align: center;
+}
+div:nth-of-type(2) {
+    align-self: center;
+}
+
+div:nth-of-type(3) {
+    align-self: flex-end;
 }
