--- a/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
+++ b/10_Responsive_CSS_Flexbox/flexbox/flexbox.css
@@ -10,26 +10,18 @@ h1 {
 #container  {
     background-color: #6c757d;
     width: 90%;
-    height: 500px;
+    /* height: 500px; */
     margin: 0 auto;
     border: 5px solid #6c757d;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
     flex-wrap: wrap;
-    
 }
 
 #container div {
     width: 200px;
     height: 200px;
     text-align: center;
-}
-div:nth-of-type(2) {
-    align-self: center;
-}
-
-div:nth-of-type(3) {
-    align-self: flex-end;
+    flex-basis: 200px;
 }
